--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+
+[dependencies.sdl2]
+    git = "https://github.com/AngryLawyer/rust-sdl2"
+    features = ["gfx"]
